--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "gsap": "^3.6.1",
+    "gsap": "file:gsap-bonus.tgz",
     "vue": "^2.6.11"
   },
   "devDependencies": {
